@@ -21,6 +21,7 @@ import static java.util.Collections.singleton;
 import static java.util.Collections.singletonList;
 import static org.apache.solr.common.params.CommonParams.NAME;
 
+import com.google.common.collect.ImmutableSet;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
@@ -160,6 +161,7 @@ class Permission {
   }
 
   static final Set<String> knownKeys =
-      Set.of("collection", "role", "params", "path", "method", NAME, "index");
-  public static final Set<String> HTTP_METHODS = Set.of("GET", "POST", "DELETE", "PUT", "HEAD");
+      ImmutableSet.of("collection", "role", "params", "path", "method", NAME, "index");
+  public static final Set<String> HTTP_METHODS =
+      ImmutableSet.of("GET", "POST", "DELETE", "PUT", "HEAD");
 }
