@@ -18,6 +18,7 @@ package org.apache.solr.security;
 
 import static org.apache.solr.handler.admin.SecurityConfHandler.getMapValue;
 
+import com.google.common.collect.ImmutableSet;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
@@ -92,7 +93,6 @@ public class Sha256AuthenticationProvider
     }
   }
 
-  @Override
   public boolean authenticate(String username, String password) {
     String cred = credentials.get(username);
     if (cred == null || cred.isEmpty()) return false;
@@ -179,6 +179,5 @@ public class Sha256AuthenticationProvider
     return apis.get(0).getSpec();
   }
 
-  // TODO make private?
-  static final Set<String> supported_ops = Set.of("set-user", "delete-user");
+  static final Set<String> supported_ops = ImmutableSet.of("set-user", "delete-user");
 }
